--- a/src/sass/config/_media.scss
+++ b/src/sass/config/_media.scss
@@ -95,8 +95,9 @@
     }
 
     .kanban__card-active {
-        width: 100%;
-        left: 0;
+        width: 96%;
+        left: 4%;
+        margin: 0 0 0 -2%
     }
 
     .kanban__column-head {
