--- a/src/style/main.css
+++ b/src/style/main.css
@@ -494,6 +494,15 @@ textarea {
   top: calc(50% - 110px);
   left: calc(50% - 300px);
   padding: 10px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   border-radius: 20px;
   background: rgba(0, 0, 0, 0.9);
   width: 600px;
@@ -508,8 +517,10 @@ textarea {
 
 .kanban__card-settings {
   position: absolute;
-  top: calc(50% - 72px);
-  width: 85%;
+  top: calc(50% - 60px);
+  width: 90%;
+  left: 10%;
+  margin: 0 0 0 -5%;
   background: #000;
   border-radius: 10px;
   font-size: 16px;
@@ -599,8 +610,9 @@ textarea {
 
 .kanban__card-edit {
   position: absolute;
-  top: calc(50% - 72px);
-  left: 5px;
+  top: calc(50% - 60px);
+  left: 10%;
+  margin: 0 0 0 -5%;
   width: 90%;
   padding: 20px;
   background: #000;
@@ -638,8 +650,8 @@ textarea {
   position: absolute;
   width: 40px;
   height: 40px;
-  top: calc(100% - 15px);
-  left: -10px;
+  bottom: -20px;
+  left: 20px;
   border-radius: 50%;
   overflow: hidden;
   border: 2px solid #ccc;
@@ -679,8 +691,8 @@ textarea {
   position: absolute;
   width: 40px;
   height: 40px;
-  bottom: calc(0% - 15px);
-  right: -10px;
+  bottom: -20px;
+  right: 20px;
   border-radius: 50%;
   overflow: hidden;
   border: 2px solid #ccc;
@@ -1093,8 +1105,9 @@ textarea {
     font-size: 15px;
   }
   .kanban__card-active {
-    width: 100%;
-    left: 0;
+    width: 96%;
+    left: 4%;
+    margin: 0 0 0 -2%;
   }
   .kanban__column-head {
     min-width: 250px;
